--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
     },
     "ios": {
       "supportsTablet": true,
-      "package":"com.himanshu.aora"
+      "package": "com.himanshu.aora"
     },
     "android": {
       "adaptiveIcon": {
@@ -26,7 +26,8 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-font"
     ]
   }
 }
