--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-native-appwrite": "^0.4.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-url-polyfill": "^2.0.0"
+    "react-native-url-polyfill": "^2.0.0",
+    "expo-splash-screen": "~0.27.5",
+    "expo-font": "~12.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
